# Astin-Cometstrike

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
src/: atlas_renderer.h  atsin2d.h  background.h  collision_system.h  comet_wave_system.h  game.h  game_object.h  main.cpp  projectile.h  resource_loader.h  sdl2_backend.h  sdl_backend.h  spaceship.h  tag_name.h  tiny_comet.h
src/interface/: box_collision.h  create_projectile.h  health.h
